--- a/ch0.cfg
+++ b/ch0.cfg
@@ -1,6 +1,6 @@
 CHANNELID=0
 CHANNELNAME=TRT1
-RECPATH=/stdisk/
+RECPATH=/stdisk/TRT_1/
 FREQUENCY=11096000
 POL=H
 SYMBOLRATE=30000
@@ -8,4 +8,4 @@ AUDIOPID=513
 VIDEOPID=512
 DISEQC=1
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/
+FLV_RECPATH=/stdisk/FLV/TRT1/
