--- a/ch0.cfg
+++ b/ch0.cfg
@@ -1,11 +1,6 @@
-CHANNELID=0
+TUNERID=0
 CHANNELNAME=TRT1
-RECPATH=/stdisk/TRT_1/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=513
-VIDEOPID=512
-DISEQC=1
+RECPATH=c:\transcode\TRT_1
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRT1/
+FLV_RECPATH=c:\transcode\flv\TRT_1
+LOOKUP_PATH=c:\\
