--- a/ch1.cfg
+++ b/ch1.cfg
@@ -1,11 +1,6 @@
-CHANNELID=1
+TUNERID=1
 CHANNELNAME=TRTHABER
-RECPATH=/stdisk/TRT_Haber/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=613
-VIDEOPID=612
-DISEQC=1
+RECPATH=c:\transcode\TRTHABER\
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRTHABER/
+FLV_RECPATH=c:\transcode\flv\TRTHABER
+LOOKUP_PATH=c:\\
