--- a/ch2.cfg
+++ b/ch2.cfg
@@ -1,11 +1,6 @@
-CHANNELID=2
+TUNERID=2
 CHANNELNAME=TRTTURK
-RECPATH=/stdisk/TRT_Turk/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=713
-VIDEOPID=712
-DISEQC=1
+RECPATH=c:\transcode\TRTTURK\
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRTTURK/
+FLV_RECPATH=c:\transcode\flv\TRTTURK
+LOOKUP_PATH=c:\\
