Fixed some minor bugs

--- a/ch1.cfg
+++ b/ch1.cfg
@@ -1,6 +1,6 @@
 TUNERID=1
 CHANNELNAME=TRTHABER
-RECPATH=c:\transcode\TRTHABER\
+RECPATH=c:\transcode\TRTHABER
 FLV_ENABLED=true
 FLV_RECPATH=c:\transcode\flv\TRTHABER
 LOOKUP_PATH=c:\\
