Added mencoder support

--- a/ch0.cfg
+++ b/ch0.cfg
@@ -1,6 +1,6 @@
 TUNERID=0
-CHANNELNAME=TRT1
-RECPATH=c:\transcode\TRT_1
+CHANNELNAME=SHOWTURK
+RECPATH=z:\\transcode\\SHOWTURK
 FLV_ENABLED=true
-FLV_RECPATH=c:\transcode\flv\TRT_1
+FLV_RECPATH=z:\\transcode\\flv\\SHOWTURK
 LOOKUP_PATH=c:\\
