--- a/ch1.cfg
+++ b/ch1.cfg
@@ -1,6 +1,6 @@
 TUNERID=1
-CHANNELNAME=TRTHABER
-RECPATH=c:\transcode\TRTHABER
+CHANNELNAME=STVEU
+RECPATH=z:\\transcode\\STVEU
 FLV_ENABLED=true
-FLV_RECPATH=c:\transcode\flv\TRTHABER
+FLV_RECPATH=z:\\transcode\\flv\\STVEU
 LOOKUP_PATH=c:\\
