--- a/ch2.cfg
+++ b/ch2.cfg
@@ -1,6 +1,6 @@
 TUNERID=2
-CHANNELNAME=TRTTURK
-RECPATH=c:\transcode\TRTTURK\
+CHANNELNAME=ATVEU
+RECPATH=z:\\transcode\\ATVEU\\
 FLV_ENABLED=true
-FLV_RECPATH=c:\transcode\flv\TRTTURK
+FLV_RECPATH=z:\\transcode\\flv\\ATVEU
 LOOKUP_PATH=c:\\
