- Added AID (Audio ID) VID (Video ID) parameters to support multiple pids

--- a/ch0.cfg
+++ b/ch0.cfg
@@ -1,11 +1,8 @@
-CHANNELID=0
-CHANNELNAME=TRT1
-RECPATH=/stdisk/TRT_1/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=513
-VIDEOPID=512
-DISEQC=1
+TUNERID=0
+CHANNELNAME=ANSTV
+AID=106
+VID=105
+RECPATH=c:\\
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRT1/
+FLV_RECPATH=c:\\
+LOOKUP_PATH=c:\\
