--- a/ch1.cfg
+++ b/ch1.cfg
@@ -1,11 +1,8 @@
-CHANNELID=1
-CHANNELNAME=TRTHABER
-RECPATH=/stdisk/TRT_Haber/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=613
-VIDEOPID=612
-DISEQC=1
+TUNERID=1
+CHANNELNAME=AZTV
+AID=106
+VID=105
+RECPATH=z:\\transcode\\AZTV1\\
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRTHABER/
+FLV_RECPATH=z:\\transcode\\flv\\AZTV1
+LOOKUP_PATH=c:\\
