--- a/ch2.cfg
+++ b/ch2.cfg
@@ -1,11 +1,8 @@
-CHANNELID=2
-CHANNELNAME=TRTTURK
-RECPATH=/stdisk/TRT_Turk/
-FREQUENCY=11096000
-POL=H
-SYMBOLRATE=30000
-AUDIOPID=713
-VIDEOPID=712
-DISEQC=1
+TUNERID=2
+CHANNELNAME=SPACETV
+RECPATH=z:\\transcode\\SPACETV1
+AID=106
+VID=105
 FLV_ENABLED=true
-FLV_RECPATH=/stdisk/FLV/TRTTURK/
+FLV_RECPATH=z:\\transcode\\flv\\SPACETV1
+LOOKUP_PATH=c:\\
